[workspace]
members=[
    "crates/engine",
    "crates/tui"
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
enum_dispatch = "0.3.12"
itertools = "0.12.0"
rand = "0.8.5"
ratatui = "0.24.0"
strum = "0.25.0"
strum_macros = "0.25.3"
criterion = "0.5.1"
rayon = "1.8.0"
