[package]
name = "rustfall-engine"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace=true
enum_dispatch.workspace=true
itertools.workspace=true
rand = { workspace=true, features = ["small_rng"] }
strum.workspace=true
strum_macros.workspace=true
rayon.workspace=true

[dev-dependencies]
criterion.workspace=true


[lib]
bench = false

[[bench]]
name = "sandbox_bench"
harness = false

[[bench]]
name = "vec_bench"
harness = false
