[package]
name = "rustfall-tui"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine", package = "rustfall-engine" }
anyhow.workspace=true
crossterm.workspace=true
ratatui.workspace=true
itertools.workspace=true
strum.workspace=true
